--- a/presentation1-mcyeh.ipynb
+++ b/presentation1-mcyeh.ipynb
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -197,10 +197,10 @@
     {
      "data": {
       "text/plain": [
-       "10657"
+       "12972"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {
      },
      "output_type": "execute_result"
@@ -208,9 +208,9 @@
    ],
    "source": [
     "# This Julia file includes all the words that Wordle will accept as a guess, as well as all the possible answers.\n",
-    "include(\"words.jl\") # I stole this information straight from the Wordle source code. Interestingly, the numbers I have here don't match with the numbers from the 3Blue1Brown video, so I am wondering if there was a change made.\n",
+    "include(\"words.jl\") # I stole this information straight from the Wordle source code. \n",
     "\n",
-    "length(words)"
+    "length(words) + length(answers) # The words and answers are disjoint but you can type all of them in"
    ]
   },
   {
@@ -242,9 +242,20 @@
     "collapsed": false
    },
    "source": [
-    "There are 10,657 possible guesses that Wordle will accept. In reality, there are less words that it would use as answers, but let's ignore that. Now, let's say that the word CRATE cuts the number of guesses down from 10657 to just 670, then the amount of guesses have been cut down by a factor of almost 16! That means that amount of information that the word CRATE gives us is about $I = -\\log_2(1/16) = 4$! By finding the word for each guess that gives us the most amount of information or bits, we can reduce the number of possible guesses by as much as possible per guess!\n",
+    "There are 12972 possible guesses that Wordle will accept. In reality, there are less words that it would use as answers, but let's ignore that. Now, let's say that the word CRATE cuts the number of guesses down from 12972 to just 810, then the amount of guesses have been cut down by a factor of almost 16! That means that amount of information that the word CRATE gives us is about $I = -\\log_2(1/16) = 4$! By finding the word for each guess that gives us the most amount of information or bits, we can reduce the number of possible guesses by as much as possible per guess!\n",
     "\n",
     "So how can we find which word would give us the most amount of information?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+   ],
+   "source": [
    ]
   },
   {
@@ -266,6 +277,40 @@
     "Here, $w$ is the word that we are guessing. $x$ is one of the possible results that could appear on the screen, and $p(x)$ is the probability of each of those results.\n",
     "\n",
     "For example, if the word is \"CRATE\", the first x could be the result where all letters are gray. Then, $p(x$) is the probability of getting that result, and $-log_2(x)$ is the amount of information of that result. When we take the sum, we get the expected information of each guess.\n",
+    "\n",
+    "If we had a uniform distribution of possibilities, the Entropy function would be equal to $\\log_2(3^5)$ since there are $3^5$ equally likely outcomes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7.924812503605781"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {
+     },
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "log(3^5)/log(2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "The result of that is about 8. Which means that, at most, we would be able to cut our set down in half about 8 times! So there is a strict upperbound for our expected entropy value. However, since the probability of each outcome i not uniform, we can expect our entropy values to be lower than that for all of our guesses.\n",
     "\n",
     "So now, we want to find the word with the highest entropy, or the highest expected information!"
    ]
@@ -306,6 +351,12 @@
    },
    "name": "julia-1.7",
    "resource_dir": "/ext/jupyter/kernels/julia-1.7"
+  },
+  "language_info": {
+   "file_extension": ".jl",
+   "mimetype": "application/julia",
+   "name": "julia",
+   "version": "1.7.2"
   }
  },
  "nbformat": 4,
