--- a/presentation2-mcyeh.ipynb
+++ b/presentation2-mcyeh.ipynb
@@ -24,7 +24,7 @@
     "collapsed": false
    },
    "source": [
-    "Now that we know how the game Wordle works, and a basic understanding of Information Theory, we will apply it to find the optimal guess for Wordle!"
+    "Now that we know how the game Wordle works, and a basic understanding of Information Theory, we will apply it to find the optimal first guess for Wordle!"
    ]
   },
   {
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -58,21 +58,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "243\n"
+      "Num outcomes: 243\n",
+      "Num possibleInputs: 12972\n"
      ]
     }
    ],
    "source": [
     "import enum\n",
     "import itertools\n",
+    "import Wordle\n",
+    "import math\n",
     "\n",
     "class Results(enum.Enum):\n",
     "    gray = 0\n",
     "    yellow = 1\n",
     "    green = 2\n",
-    "   \n",
-    "outcomes = tuple(itertools.product(Results, repeat=5))\n",
-    "print(len(outcomes)) # This tells us that we have all 243 possible outcomes"
+    "\n",
+    "possibleInputs = Wordle.words + Wordle.answers # words and answers are disjoint, so combining them gives us all possible inputs\n",
+    "outcomes = tuple(itertools.product(Results, repeat=5)) # All tuples of length 5 where the values are Results.gray, Results.yellow, or Results.green\n",
+    "\n",
+    "print(\"Num outcomes: \" + str(len(outcomes))) # This tells us that we have all 243 possible outcomes\n",
+    "print(\"Num possibleInputs: \" + str(len(possibleInputs)))"
    ]
   },
   {
@@ -86,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -111,13 +117,13 @@
     "    \n",
     "    return tuple(outcome)\n",
     "\n",
-    "def getOutcomeDict(guess):\n",
+    "def getOutcomeDict(guess, wordList):\n",
     "    # A diction that contains the number of each time an outcome appears\n",
     "    outcomeDict = {}\n",
     "    for outcome in outcomes:\n",
     "        outcomeDict[outcome] = 0\n",
     "        \n",
-    "    for answer in Wordle.words:\n",
+    "    for answer in wordList:\n",
     "        outcomeDict[getOutcome(guess, answer)] += 1\n",
     "        \n",
     "    return outcomeDict\n",
@@ -138,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -147,17 +153,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5.969965297710193\n"
+      "3.9687406244872463\n"
      ]
     }
    ],
    "source": [
-    "import Wordle\n",
-    "import math\n",
-    "\n",
     "def entropy(guess, wordList):\n",
     "    # A dictionary that contains the number of each time an outcome appears\n",
-    "    outcomeDict = getOutcomeDict(guess)\n",
+    "    outcomeDict = getOutcomeDict(guess, wordList)\n",
     "    totalOutcomes = len(wordList)\n",
     "    \n",
     "    expected = 0\n",
@@ -168,7 +171,7 @@
     "            \n",
     "    return expected\n",
     "\n",
-    "print(entropy(\"saner\", Wordle.words))"
+    "print(entropy(\"abyss\", possibleInputs))"
    ]
   },
   {
@@ -177,14 +180,14 @@
     "collapsed": false
    },
    "source": [
-    "Based on what value our entropy function gives us for a word, we can expect that word to divide our possible guesses in half that many number of times! Remember, and entropy value of 4 means that we cut our possibilities in half 4 times!\n",
+    "Based on what value our entropy function gives us for a word, we can expect that word to divide our possible guesses in half that many number of times! Remember, an entropy value of 4 means that we cut our possibilities in half 4 times!\n",
     "\n",
-    "Now that we have a function that returns the entropy of each word. We can find the word with the highest entropy value!"
+    "Now that we have a function that returns the entropy of each word. We can find the word with the highest entropy value by iterating through every single word and getting their entropy!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -206,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -215,16 +218,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The word with the highest entropy is at index 1607\n",
-      "The word with the highest entropy is saner\n",
-      "The word's entropy is 5.969965297710193\n"
+      "The word with the highest entropy is at index 1668\n",
+      "The word with the highest entropy is raise\n",
+      "The word's entropy is 5.9197368425161985\n"
      ]
     }
    ],
    "source": [
     "print(\"The word with the highest entropy is at index \" + str(highestEntropyIndex))\n",
     "print(\"The word with the highest entropy is \" + Wordle.answers[highestEntropyIndex])\n",
-    "print(\"The word's entropy is \" + str(entropy(Wordle.answers[highestEntropyIndex], Wordle.words)))"
+    "print(\"The word's entropy is \" + str(entropy(Wordle.answers[highestEntropyIndex], possibleInputs)))"
    ]
   },
   {
@@ -233,20 +236,21 @@
     "collapsed": false
    },
    "source": [
-    "The result of this code tells us that the word with the highest entropy is \"saner\" with an entropy value of almost 6. This means that, on average, guessing saner will cut down all the possible remaining guesses in half 6 times! So, that means that if we have 10657 possible words at the beginning, there will only be about 166 possible guesses left!\n",
+    "The result of this code tells us that the word with the highest entropy is \"raise\" with an entropy value of almost 6. This means that, on average, guessing saner will cut down all the possible remaining guesses in half 6 times! So, that means that if we have 12,972 possible words at the beginning, there will only be about 202 possible guesses left!\n",
     "\n",
     "Now, if you have watched the video by 3Brown1Blue, you might have noticed that my word is different from his. That is because of a couple of reasons:\n",
     "1. He added code to consider other factors such as word frequency\n",
-    "2. He considered all possible guesses\n",
+    "2. He actually looks deeper into the search to see if how he could optimize later guesses, not just the first guess\n",
+    "3. He considered all possible guesses, I only considered all possible answers\n",
     "\n",
-    "If you were paying close attention, you might have noticed that I used \"Wordle.answers\" this time instead of the usual \"Wordle.words\". That's because \"Wordle.answers\" is the subset of all words that could possibly be answers. This makes the code run faster and it actually gives you a more accurate answer! The whole list of words is too long for this code to run on CoCalc.\n",
+    "If you were paying close attention, you might have noticed that I used \"Wordle.answers\" this time instead of the usual \"possibleInputs\". That's because \"Wordle.answers\" is the subset of all words that could possibly be answers. This makes the code run faster and it actually gives you a more accurate answer! The whole list of words is too long for this code to run on CoCalc.\n",
     "\n",
     "So, now that we can find the word with the highest entropy, we need a function that will return us back the list of remaining words!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -255,7 +259,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['crake', 'crame', 'crape', 'crare']\n"
+      "['crake', 'crame', 'crape', 'crare', 'crate', 'craze', 'crave', 'crane']\n"
      ]
     }
    ],
@@ -275,7 +279,7 @@
     "            newWordList.append(word)\n",
     "    return newWordList\n",
     "\n",
-    "print(getRemainingWordsListWithOutcome(\"crate\", Wordle.words, (Results.green, Results.green, Results.green, Results.gray, Results.green)))"
+    "print(getRemainingWordsListWithOutcome(\"crate\", possibleInputs, (Results.green, Results.green, Results.green, Results.gray, Results.green)))"
    ]
   },
   {
@@ -298,17 +302,17 @@
     "collapsed": false
    },
    "source": [
-    "## Conclusion\n",
+    "# Conclusion\n",
     "With a little bit of math and coding, we have written a program that can find us the word with the highest entropy so that, on average, it reduces the amount of possible guesses as much as possible. However, I would like to point out that this program can be further improved to give even better guesses. First, we can also give higher weights to words that are used more frequently, and words that have more common letters.\n",
     "\n",
-    "The program is also quite slow. The Youtuber 3Brown1Blue made a video where he showed that an optimization he tried created errors in the results. So I wanted to avoid those issues by making the code do all the work without trying to skip things.\n",
+    "The program is also quite slow. The Youtuber 3Blue1Brown made a video where he showed that an optimization he tried created errors in the results. So I wanted to avoid those issues by making the code do all the work without trying to skip things.\n",
     "\n",
     "However, in the end, it works! And it probably would work a lot better if it we running on my local machine than on CoCalc. But I definitely enjoyed making this and I am glad that it works. Now I am going to start all my games with the word Saner."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
