--- a/presentation2-mcyeh.ipynb
+++ b/presentation2-mcyeh.ipynb
@@ -303,7 +303,7 @@
    },
    "source": [
     "# Conclusion\n",
-    "With a little bit of math and coding, we have written a program that can find us the word with the highest entropy so that, on average, it reduces the amount of possible guesses as much as possible. However, I would like to point out that this program can be further improved to give even better guesses. First, we can also give higher weights to words that are used more frequently, and words that have more common letters.\n",
+    "With a little bit of math and coding, we have written a program that can find us the word with the highest entropy so that, on average, it reduces the amount of possible guesses as much as possible. However, I would like to point out that this program can be further improved to give even better guesses. First, we can also give higher weights to words that are used more frequently, and words that have more common letters. We can also make the algorith look deeper to see if different words give better results in later guesses.\n",
     "\n",
     "The program is also quite slow. The Youtuber 3Blue1Brown made a video where he showed that an optimization he tried created errors in the results. So I wanted to avoid those issues by making the code do all the work without trying to skip things.\n",
     "\n",
