--- a/presentation1-mcyeh.ipynb
+++ b/presentation1-mcyeh.ipynb
@@ -51,7 +51,13 @@
     "3. The letter exists in the word and is in the right spot, marked with a green box\n",
     "\n",
     "**Here is an example:**\n",
-    "Our first guess was \"CRATE\". Since the letters \"CRAT\" are in a gray box, we know that none of those letters exist in this word. Our next guess is \"DRIED\". Since the first D is now in a green box, we know the word begins with a D! Since there is another D in a yellow box, we know that there is at least another D somewhere in the word! Our final guess is the word \"DODGE\", which shows up in all green which means that we got the word in just 3 guesses!\\\n",
+    "Our first guess was \"CRATE\". Since the letters \"CRAT\" are in gray boxes, we know that none of those letters exist in this word. However, the last E is in a green box! So we know we got one! \n",
+    "\n",
+    "Our next guess is \"DRIED\".  Since the first D is now in a green box, we know the word begins with a D! Since there is another D in a yellow box, we know that there is at least another D somewhere in the word! \n",
+    "\n",
+    "\n",
+    "\n",
+    "Our final guess is the word \"DODGE\", which shows up in all green which means that we got the word in just 3 guesses!\\\n",
     "![Alt text](wordleExample.png)"
    ]
   },
@@ -83,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -99,39 +105,33 @@
       "6\n",
       "3\n",
       "1\n",
+      "2\n",
       "\n",
       "8: \n",
       "50\n",
       "25\n",
       "12\n",
       "6\n",
-      "3\n",
-      "1\n",
-      "2\n",
+      "9\n",
+      "7\n",
+      "8\n",
       "\n",
       "18: \n",
       "50\n",
       "25\n",
       "12\n",
-      "6\n",
-      "3\n",
+      "18\n",
       "\n",
       "32: \n",
       "50\n",
       "25\n",
-      "12\n",
-      "6\n",
-      "3\n",
-      "4\n",
+      "37\n",
+      "31\n",
+      "34\n",
+      "32\n",
       "\n",
       "50: \n",
       "50\n",
-      "25\n",
-      "12\n",
-      "6\n",
-      "3\n",
-      "4\n",
-      "5\n",
       "\n"
      ]
     }
@@ -139,20 +139,25 @@
    "source": [
     "# Recursive example of this binary search\n",
     "function numberGuesser(rangeStart, rangeEnd, target)\n",
+    "    if rangeStart > rangeEnd\n",
+    "        return\n",
+    "    end\n",
+    "        \n",
     "    currentGuess = div((rangeStart + rangeEnd), 2) # Sets currentGuess to middle of the range\n",
     "    println(currentGuess)\n",
+    "        \n",
     "    if currentGuess == target\n",
     "        return\n",
     "    elseif currentGuess > target\n",
     "        numberGuesser(rangeStart, currentGuess - 1, target)\n",
-    "    else     \n",
+    "    else\n",
     "        numberGuesser(currentGuess + 1, rangeEnd, target)\n",
     "    end\n",
     "end\n",
     "\n",
     "for i in 1:5\n",
     "    println(string(2*i^2, \": \"))\n",
-    "    numberGuesser(1, 100, i)\n",
+    "    numberGuesser(1, 100, 2*i^2)\n",
     "    println()\n",
     "end"
    ]
@@ -245,17 +250,6 @@
     "There are 12972 possible guesses that Wordle will accept. In reality, there are less words that it would use as answers, but let's ignore that. Now, let's say that the word CRATE cuts the number of guesses down from 12972 to just 810, then the amount of guesses have been cut down by a factor of almost 16! That means that amount of information that the word CRATE gives us is about $I = -\\log_2(1/16) = 4$! By finding the word for each guess that gives us the most amount of information or bits, we can reduce the number of possible guesses by as much as possible per guess!\n",
     "\n",
     "So how can we find which word would give us the most amount of information?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-   ],
-   "source": [
    ]
   },
   {
